force-app/main/default/objects/CB_Screening_Result__c/CB_Screening_Result__c.object-meta.xml
<CustomObject>
    <description>Sanctions/PEP/adverse media screening summary</description>
    <label>CB Screening Result</label>
    <nameField>
        <displayFormat>SCR-{000000}</displayFormat>
        <label>CB Screening Result Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CB Screening Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>