force-app/main/default/objects/CB_Screening_Result__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CB Screening Results</relationshipLabel>
    <relationshipName>CB_Screening_Results</relationshipName>
    <type>Lookup</type>
</CustomField>