force-app/main/default/objects/CB_Screening_Result__c/fields/Highest_Match_Score__c.field-meta.xml
<CustomField>
    <fullName>Highest_Match_Score__c</fullName>
    <label>Highest Match Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>