force-app/main/default/objects/CB_Screening_Result__c/fields/Onboarding_Application__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Application__c</fullName>
    <label>Onboarding Application</label>
    <referenceTo>CB_Onboarding_Application__c</referenceTo>
    <relationshipLabel>CB Screening Results</relationshipLabel>
    <relationshipName>CB_Screening_Results</relationshipName>
    <type>Lookup</type>
</CustomField>