force-app/main/default/objects/CB_Screening_Result__c/fields/Overall_Status__c.field-meta.xml
<CustomField>
    <fullName>Overall_Status__c</fullName>
    <label>Overall Status</label>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Clear</fullName><default>false</default><label>Clear</label></value><value><fullName>Potential_Match</fullName><default>false</default><label>Potential_Match</label></value><value><fullName>Confirmed_Match</fullName><default>false</default><label>Confirmed_Match</label></value><value><fullName>Blocked</fullName><default>false</default><label>Blocked</label></value></valueSetDefinition></valueSet>
    <type>Picklist</type>
</CustomField>