force-app/main/default/objects/CB_Screening_Result__c/fields/PEP_Status__c.field-meta.xml
<CustomField>
    <fullName>PEP_Status__c</fullName>
    <label>PEP Status</label>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Not_PEP</fullName><default>false</default><label>Not_PEP</label></value><value><fullName>PEP</fullName><default>false</default><label>PEP</label></value><value><fullName>RCA</fullName><default>false</default><label>RCA</label></value></valueSetDefinition></valueSet>
    <type>Picklist</type>
</CustomField>