force-app/main/default/objects/CB_Screening_Result__c/fields/Screened_At__c.field-meta.xml
<CustomField>
    <fullName>Screened_At__c</fullName>
    <label>Screened At</label>
    <type>DateTime</type>
</CustomField>