force-app/main/default/objects/CB_Screening_Result__c/fields/Vendor_Reference__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Reference__c</fullName>
    <label>Vendor Reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>