force-app/main/default/objects/CB_Screening_Result__c/listViews/All_Screening_Results.listView-meta.xml
<ListView>
    <fullName>All_Screening_Results</fullName>
    <columns>NAME</columns>
    <columns>Onboarding_Application__c</columns>
    <columns>Account__c</columns>
    <columns>Overall_Status__c</columns>
    <columns>Sanctions_Status__c</columns>
    <columns>PEP_Status__c</columns>
    <columns>Screened_At__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Screening Results</label>
</ListView>